--- a/Labs/Lab1/Comp_2139/Comp_2139/Views/Project/Index.cshtml
+++ b/Labs/Lab1/Comp_2139/Comp_2139/Views/Project/Index.cshtml
@@ -5,33 +5,35 @@
     ViewData["Title"] = "Projects";
 }
 
+<h2>Projects</h2>
+
 @if (Model.Any())
 {
-        <table class="table">
-            <thead>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>Id</th>
+                <th>Name</th>
+                <th>Description</th>
+
+            </tr>
+        </thead>
+
+        <tbody>
+
+            @foreach (var project in Model)
+            {
                 <tr>
-                    <th>Id</th>
-                    <th>Name</th>
-                    <th>Description</th>
+                    <td>@project.ProjectId.</td>
+                    <td>@project.Name</td>
+                    <td>@project.Description</td>
 
                 </tr>
-            </thead>
-
-            <tbody>
-
-                @foreach(var project in Model)
-                    {
-                        <tr>
-                            <td>@project.ProjectId.</td>
-                            <td>@project.Name</td>
-                            <td>@project.Description</td>
-
-                        </tr>
-                    }
-            </tbody>
-        </table>
-    }
-    else
-    {
-        <p>No Projects Available</p>
+            }
+        </tbody>
+    </table>
+}
+else
+{
+    <p>No Projects Available</p>
 }
