--- a/Labs/Lab1/Comp_2139/Comp_2139/Views/Project/Details.cshtml
+++ b/Labs/Lab1/Comp_2139/Comp_2139/Views/Project/Details.cshtml
@@ -16,6 +16,15 @@
         <dl class="row">
             <dt class="col-sm-3">Project Id</dt>
             <dd class="col-sm-9">@Model.ProjectId</dd>
+
+            <dt class="col-sm-3">Start Date</dt>
+            <dd class="col-sm-9">@Model.StartDate.ToShortDateString()</dd>
+
+            <dt class="col-sm-3">End Date</dt>
+            <dd class="col-sm-9">@Model.EndDate.ToShortDateString()</dd>
+
+            <dt class="col-sm-3">Status</dt>
+            <dd class="col-sm-9">@Model.Status</dd>
         </dl>
 
         <!-- Any other properties that you want to display from your project-->
