--- a/Labs/Lab1/Comp_2139/Comp_2139/Views/Project/Index.cshtml
+++ b/Labs/Lab1/Comp_2139/Comp_2139/Views/Project/Index.cshtml
@@ -3,10 +3,13 @@
 @{
     //razor block
     ViewData["Title"] = "Projects";
+    bool searchPerformed = ViewData["SearchPerformed"] as bool? ?? false;
+    string searchString = ViewData["SearchString"] as string;
 }
 
 <h2>Projects</h2>
 
+<a asp-action="Create" class="btn btn-primary">Create New Project</a>
 @if (Model.Any())
 {
     <table class="table">
@@ -15,6 +18,7 @@
                 <th>Id</th>
                 <th>Name</th>
                 <th>Description</th>
+                <th>Action</th> <!-- Column for action buttons details, edit, delete.-->
             </tr>
         </thead>
 
@@ -26,12 +30,27 @@
                     <td>@project.ProjectId.</td>
                     <td>@project.Name</td>
                     <td>@project.Description</td>
+                    <td>
+                        <a asp-action="Details" asp-route-id="@project.ProjectId" class="btn btn-info">Details</a>
+                        <a asp-action="Edit" asp-route-id="@project.ProjectId" class="btn btn-secondary">Edit</a>
+                        <a asp-action="Delete" asp-route-id="@project.ProjectId" class="btn btn-danger">Delete</a>
+                        <a asp-controller="Task" asp-action="Index" asp-route-projectId="@project.ProjectId" class="btn btn-warning">View Tasks</a>
+
+
+                    </td>
                 </tr>
             }
         </tbody>
     </table>
-}
-else
-{
-    <p>No Projects Available</p>
-}
+    }
+    else
+    {
+        if (searchPerformed)
+        {
+            <p> No Projects with the name or description "@searchString" were found</p>
+        }
+        else
+        {
+            <p>No Projects Available</p>
+        }
+    }
