--- a/Labs/Lab1/Comp_2139/Comp_2139/Views/Shared/_Layout.cshtml
+++ b/Labs/Lab1/Comp_2139/Comp_2139/Views/Shared/_Layout.cshtml
@@ -18,8 +18,23 @@
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                <!--
+                    *** Lab 4 ***
+                    <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
+                -->
+                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
+
+                    <form class="d-flex" asp-controller="Home" asp-action="GeneralSearch" method="get">
+                        <input class="form-control" type="text" placeholder="Search" name="searchString" />
+                        <select class="form-control btn btn-secondary dropdown-toggle" name="searchType">
+                            <option value="Projects">Projects</option>
+                            <option value="Tasks">Tasks</option>
+                        </select>
+                        <button class="btn btn-outline-success" type="submit">Search</button>
+                    </form>
+
+                    <ul class="navbar-nav flex-grow-1 justify-content-end">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index"> <i class="fa-solid fa-house"></i>Home</a>
                         </li>
@@ -29,6 +44,7 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Project" asp-action="Index"> <i class="fa-solid fa-list-check"></i>Projects</a>
                         </li>
+                        
                     </ul>
                 </div>
             </div>
