--- a/Labs/Lab1/Comp_2139/Comp_2139/Areas/ProjectManagement /Views/Project/Index.cshtml
+++ b/Labs/Lab1/Comp_2139/Comp_2139/Areas/ProjectManagement /Views/Project/Index.cshtml
@@ -30,6 +30,9 @@
                     <td>@project.ProjectId.</td>
                     <td>@project.Name</td>
                     <td>@project.Description</td>
+                    <td> <!-- Inject ViewComponent-->
+                        @await Component.InvokeAsync("ProjectSummary", new  { projectId = project.ProjectId }) 
+                    </td>
                     <td>
                         <a asp-action="Details" asp-route-id="@project.ProjectId" class="btn btn-info">Details</a>
                         <a asp-action="Edit" asp-route-id="@project.ProjectId" class="btn btn-secondary">Edit</a>
