--- a/Labs/Lab1/Comp_2139/Comp_2139/Areas/ProjectManagement /Views/_ViewImports.cshtml
+++ b/Labs/Lab1/Comp_2139/Comp_2139/Areas/ProjectManagement /Views/_ViewImports.cshtml
@@ -1,7 +1,6 @@
 ﻿@using Comp_2139
 @using Comp_2139.Models
-@using Comp_2139.Areas.ProjectManagement
-@using Comp_2139.Areas.ProjectManagement.Models
+@using Comp_2139.Areas.ProjectManagement.Models;
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
