--- a/Labs/Lab1/Comp_2139/Comp_2139/Areas/ProjectManagement /Views/Project/Details.cshtml
+++ b/Labs/Lab1/Comp_2139/Comp_2139/Areas/ProjectManagement /Views/Project/Details.cshtml
@@ -9,8 +9,8 @@
 <div class="card">
 
     <div class="card-body">
-        <h3 class="card-title">@Model.Name</h3>
-        <p class="card-text">@Model.Description</p>
+        <h3 class="card-title">@Html.DisplayFor(model => model.Name)</h3>
+        <p class="card-text">@Html.DisplayFor(model => model.Description)</p>
 
 
         <dl class="row">
@@ -18,10 +18,10 @@
             <dd class="col-sm-9">@Model.ProjectId</dd>
 
             <dt class="col-sm-3">Start Date</dt>
-            <dd class="col-sm-9">@Model.StartDate.ToShortDateString()</dd>
+            <dd class="col-sm-9">@Html.DisplayFor(model => model.StartDate)</dd>
 
             <dt class="col-sm-3">End Date</dt>
-            <dd class="col-sm-9">@Model.EndDate.ToShortDateString()</dd>
+            <dd class="col-sm-9">@Html.DisplayFor(model => model.EndDate)</dd>
 
             <dt class="col-sm-3">Status</dt>
             <dd class="col-sm-9">@Model.Status</dd>
