--- a/Labs/Lab1/Comp_2139/Comp_2139/Areas/ProjectManagement/Views/Task/Create.cshtml
+++ b/Labs/Lab1/Comp_2139/Comp_2139/Areas/ProjectManagement/Views/Task/Create.cshtml
@@ -10,7 +10,7 @@
         <div asp-validation-summary="ModelOnly" class="text-danger "></div>
 
 
-        @Html.HiddenFor(model => model.ProjectId);
+        @Html.HiddenFor(model => model.ProjectId)
 
         <div class="form-group">
             <label asp-for="Title" class="control-label"></label>
