--- a/Labs/Lab1/Comp_2139/Comp_2139/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/Labs/Lab1/Comp_2139/Comp_2139/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -1,4 +1,5 @@
-@inject SignInManager<IdentityUser> SignInManager
+@using Comp_2139.Areas.ProjectManagement.Models
+@inject SignInManager<ApplicationUser> SignInManager
 @{
     var hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
 }
