--- a/Labs/Lab1/Comp_2139/Comp_2139/Views/Shared/_LoginPartial.cshtml
+++ b/Labs/Lab1/Comp_2139/Comp_2139/Views/Shared/_LoginPartial.cshtml
@@ -1,7 +1,7 @@
 @using Microsoft.AspNetCore.Identity
-
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
+@using Comp_2139.Areas.ProjectManagement.Models
+@inject SignInManager<ApplicationUser> SignInManager
+@inject UserManager<ApplicationUser> UserManager
 
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
