--- a/Labs/Lab1/Comp_2139/Comp_2139/Views/Shared/_Navbar.cshtml
+++ b/Labs/Lab1/Comp_2139/Comp_2139/Views/Shared/_Navbar.cshtml
@@ -1,8 +1,10 @@
 ﻿@{
     // Common Navbar
 }
+@using Comp_2139.Areas.ProjectManagement.Models
 @using Microsoft.AspNetCore.Identity
-@inject SignInManager<IdentityUser> SignInManager
+@inject SignInManager<ApplicationUser> SignInManager
+@inject UserManager<ApplicationUser> UserManager
 <nav class="navbar navbar-expand-sm navbar-light bg-light border-bottom box-shadow mb-3">
     <div class="container">
         <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Comp_2139</a>
@@ -40,9 +42,15 @@
 
                 @if (SignInManager.IsSignedIn(User))
                 {
-                    <li class="nav-item">
+                    <li class="nav-item d-flex align-items-center">
+
+                        @if(UserManager.GetUserAsync(User).Result.ProfilePicture != null)
+                        {
+                            <img id="profilePicture" style="width: 40px; height:40px; object-fit:cover; border-radius: 20px; object-fit:cover; margin-right: 2px"
+                                 src="data:image/*; base64, @(Convert.ToBase64String(UserManager.GetUserAsync(User).Result.ProfilePicture))"/>
+                        }
                         <a class="nav-link" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage your account">
-                            <i class="fas fa-user-circle"></i> Profile
+                            Hello @User.Identity?.Name
                         </a>
                     </li>
                     <li class="nav-item">
