--- a/Labs/Lab1/Comp_2139/Comp_2139/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/Labs/Lab1/Comp_2139/Comp_2139/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -9,59 +9,71 @@
 <partial name="_StatusMessage" model="Model.StatusMessage" />
 <partial name="_StatusMessage" model="Model.UserChangeLimitStatusMessage" />
 
-<form id="profile-form" method="post">
+
+<form id="profile-form" method="post" enctype="multipart/form-data">
+
     <div class="row">
         <div class="col-md-6">
 
+
+
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
+
             <div class="form-floating mb-3">
-                <input asp-for="Username" class="form-control" placeholder="Please choose your username." />
-                <label asp-for="Username" class="form-label"></label>
+                <input asp-for="Input.Username" class="form-control" placeholder="Username" />
+                <label asp-for="Input.Username">Username</label>
+                <span asp-validation-for="Input.Username" class="text-danger"></span>
             </div>
+
+
             <div class="form-floating mb-3">
                 <input asp-for="Input.FirstName" class="form-control" placeholder="Please enter your First Name." />
                 <label asp-for="Input.FirstName" class="form-label"></label>
                 <span asp-validation-for="Input.FirstName" class="text-danger"></span>
             </div>
+
             <div class="form-floating mb-3">
                 <input asp-for="Input.LastName" class="form-control" placeholder="Please enter your Last Name." />
                 <label asp-for="Input.LastName" class="form-label"></label>
                 <span asp-validation-for="Input.LastName" class="text-danger"></span>
             </div>
+
             <div class="form-floating mb-3">
                 <input asp-for="Input.PhoneNumber" class="form-control" placeholder="Please enter your phone number." />
                 <label asp-for="Input.PhoneNumber" class="form-label"></label>
                 <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
             </div>
             <button id="update-profile-button" type="submit" class="w-100 btn btn-lg btn-primary">Save</button>
-
         </div>
+
         <div class="col-md-6">
-            <!-- Profile Image-->
-            <div class="form-group">
-                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <!--Profile Picture upload-->
+            <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
+            <label asp-for="Input.ProfilePicture" style="width: 100%;"></label>
+            @if (Model.Input.ProfilePicture != null)
+            {
+                <img id="profilePicture" style="width: 350px; height: 350px; object-fit: cover"
+                     src="data:image/*;base64,@(Convert.ToBase64String(Model.Input.ProfilePicture))" />
 
-                <label asp-for="Input.ProfilePicture" style="width: 100px"></label>
-                @if (Model.Input.ProfilePicture != null)
-                {
-                    <img id="profilePicture" style="width:350px; height:350px; object-fit:cover"
-                         sr="data:image ; base64, @(Convert.ToBase64String(Model.Input.ProfilePicture))" />
-                }
-                else
-                {
-                    <img id="profilePicture" style="width: 350px; height: 350px; object-fit:cover" />
-                }
-                <input type="file"
-                       accept=".png, .jpg, .jpeg, .gif, .tif"
-                       asp-for="Input.ProfilePicture"
-                       class="form-control"
-                       style="border:0px!important; padding:0px; padding-top: 10px; padding-bottom:30px;"
-                       onchange="document.getElementById('profilePicture').src = window.URL.createObjectURL(this.files[0])" />
+            }
+            else
+            {
+                <img id="profilePicture" style="width: 350px; height: 350px; object-fit: cover" src="" />
 
-                <span asp-validation-for="Input.ProfilePicture" class="text-danger"></span>
-            </div>
+            }
+            <input type="file"
+                   accept=".png, .jpg, .jpeg, .gift, .tif"
+                   asp-for="Input.ProfilePicture"
+                   class="form-control"
+                   style="border:0px!important; padding:0px; padding-top:10px; padding-bottom:30px;"
+                   onchange="document.getElementById('profilePicture').src = window.URL.createObjectURL(this.files[0])" ; />
+
         </div>
+
+
+
     </div>
+
 </form>
 
 @section Scripts {
