--- a/Labs/Lab1/Comp_2139/Comp_2139/Views/RoleManager/Index.cshtml
+++ b/Labs/Lab1/Comp_2139/Comp_2139/Views/RoleManager/Index.cshtml
@@ -4,7 +4,7 @@
 }
 
 <h1>Role Manager</h1>
-<form method="post" asp-action="AddRoles" asp-controller="RoleManager">
+<form method="post"  asp-controller="RoleManager" asp-action="AddRoles">
     <div class="input-group">
         <input name="roleName" class="form-control" />
         <span class="input-group-btn">
@@ -27,7 +27,7 @@
         {
             <tr>
                 <td>@role.Id</td>
-                <td>role.Name</td>
+                <td>@role.Name</td>
             </tr>        
         }
     </tbody>
