--- a/Labs/Lab1/Comp_2139/Comp_2139/Views/Shared/_Navbar.cshtml
+++ b/Labs/Lab1/Comp_2139/Comp_2139/Views/Shared/_Navbar.cshtml
@@ -42,12 +42,15 @@
 
                 @if (SignInManager.IsSignedIn(User))
                 {
+
+                    @await Component.InvokeAsync("UserRole")
+
                     <li class="nav-item d-flex align-items-center">
 
-                        @if(UserManager.GetUserAsync(User).Result.ProfilePicture != null)
+                        @if (UserManager.GetUserAsync(User).Result.ProfilePicture != null)
                         {
                             <img id="profilePicture" style="width: 40px; height:40px; object-fit:cover; border-radius: 20px; object-fit:cover; margin-right: 2px"
-                                 src="data:image/*; base64, @(Convert.ToBase64String(UserManager.GetUserAsync(User).Result.ProfilePicture))"/>
+                                 src="data:image/*; base64, @(Convert.ToBase64String(UserManager.GetUserAsync(User).Result.ProfilePicture))" />
                         }
                         <a class="nav-link" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage your account">
                             Hello @User.Identity?.Name
